--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # command = "hugo --gc --minify -b $URL"
-  CI = npm run build
+  CI = "npm run build"
   publish = "public"
 
 [build.environment]
