--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,14 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.81.0"
+  HUGO_VERSION = "0.83.1"
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-  HUGO_ENV = "production"
+  HUGO_VERSION = "0.83.1"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.83.1"
 
 [context.deploy-preview]
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
