--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -b $URL"
+  command = "hugo --gc --minify"
   publish = "public"
 
 [build.environment]
@@ -8,6 +8,8 @@
 
 [context.production.environment]
   HUGO_VERSION = "0.83.1"
+  HUGO_ENV = "production"
+
 
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.83.1"
@@ -22,3 +24,5 @@
   package = "netlify-plugin-hugo-cache-resources"
   [plugins.inputs]
     debug = true
+
+
